# cmake-magic

./: CMakeLists.txt  LICENSE  LoadSources.cmake  README.md  gen_projects.bat
example/src/: example.cpp  example.h  example2.cpp
example/src/foobar/: example3.cpp
